Refactor HealthResource and TransferResource tests to use real services
- Updated HealthResourceTest to utilize SimpleTransferEngine and a new StandaloneDistributedTransferService for realistic testing.
- Removed mocking of TransferEngine and DistributedTransferService in TransferResourceTest, replacing with actual implementations.
- Adjusted assertions to reflect real transfer engine metrics and cluster status.
- Enhanced shutdown methods in transfer engines to return Futures for better asynchronous handling.
- Updated integration tests and examples to align with new shutdown method signatures.
- Bumped dependencies in various modules for improved stability and performance.